# SM-NR

./: README.md
autosim_map/: CMakeLists.txt  package.xml
autosim_map/include/autosim_map/: sim_map.h
autosim_map/launch/: autosim_map.launch
autosim_map/src/: sim_map.cpp  sim_map_node.cpp
costmap_2d/launch/: example_params.yaml
costmap_2d/src/: costmap_2d_ros.cpp
costmap_2d/test/: costmap_params.yaml  footprint_tests.cpp
fake_localization/launch/: fake_localization.launch
fake_localization/scripts/: fake_odom_broadcaster.py
move_base/include/move_base/: move_base.h
move_base/src/: move_base.cpp
move_base_bridge/algorithm_param/: teb_local_planner_params.yaml
move_base_bridge/costmap_param/: static_global_costmap_params.yaml  static_local_costmap_params.yaml
move_base_bridge/launch/: move_base.launch  move_base_bridge.launch
teb_local_planner/: CMakeLists.txt
teb_local_planner/cfg/: TebLocalPlannerReconfigure.cfg
teb_local_planner/include/teb_local_planner/: distance_calculations.h  homotopy_class_planner.h  obstacles.h  optimal_planner.h  planner_interface.h  teb_config.h  teb_local_planner_ros.h  totg_info_processor.h  visualization.h
teb_local_planner/include/teb_local_planner/g2o_types/: edge_borderline.h  edge_centerline.h  edge_obstacle.h
teb_local_planner/msg/: borderConstraintsMsg.msg
teb_local_planner/scripts/: dynamic_obstacle_transform.py  publish_dynamic_obstacle.py
teb_local_planner/src/: homotopy_class_planner.cpp  optimal_planner.cpp  teb_config.cpp  teb_local_planner_ros.cpp  timed_elastic_band.cpp  totg_info_processor.cpp  visualization.cpp
tocg/: CMakeLists.txt  package.xml
tocg/include/tocg/: chicken_game_with_dynamic_veh.h  extract_static_env.h
tocg/launch/: tocg_game.launch
tocg/src/: chicken_game_with_dynamic_veh.cpp  extract_static_env.cpp  tocg_node.cpp
vehicle_simulator/: CMakeLists.txt  package.xml
vehicle_simulator/include/vehicle_simulator/: scenarioreader.h  simulate_automated_car.h  simulate_environment.h  simulate_social_car.h
vehicle_simulator/launch/: conflict.launch  interface_teleop.launch  vehicle_simulator.launch
vehicle_simulator/msg/: SocialVehicles.msg
vehicle_simulator/rviz/: corridor.rviz
vehicle_simulator/scenes/: corridor_env.xml
vehicle_simulator/scripts/: interface_teleop_simple.py
vehicle_simulator/src/: scenarioreader.cpp  simulate_automated_car.cpp  simulate_environment.cpp  simulate_social_car.cpp
wheeltec_description/launch/: robot_description.launch
wheeltec_description/param/: robot_constrains.yaml
wheeltec_description/urdf/mini_akm/: mini_akm.urdf  mini_akm.xacro
